Mon Jun  1 20:05:17 CEST 2009 Guido Günther <agx@sigxcpu.org>

	enable help in applet and prefs dialog
	* src/krb5-auth-tools.c: new file
	* src/krb5-auth-tools.h: likewise
	* po/POTFILES.in: add src/krb5-auth-tools.h, remove duplicate
	  src/krb5-auth-dialog.schemas.in
	* preferences/Makefile.am (krb5_auth_dialog_sources): add
	  krb5-auth-tools.[ch]
	* src/Makefile.am (krb5_auth_dialog_preferences_SOURCES): add
	  $(top_srcdir)/krb5-auth-tools.[ch]
	* preferences/krb5-auth-dialog-preferences.c
	  (ka_preferences_dialog_response): call ka_show_help
	* preferences/krb5-auth-dialog-preferences.xml: show help button
	* src/krb5-auth-applet.c (ka_applet_cb_show_help): new function
	  (ka_applet_create_context_menu): add help menu entry

Mon Jun  1 19:56:35 CEST 2009 Guido Günther <agx@sigxcpu.org>

	add user manual
	* configure.ac: call GNOME_DOC_INIT
	* Makefile.am: process help/
	* acinclude.m4: include m4/gnome-doc-utils.m4
	* .gitignore: ignore gnome-doc-utils.make
	* help/C/figures/ka-expired.png: new file
	* help/C/figures/ka-expiring.png: likewise
	* help/C/figures/ka-valid.png: likewise
	* help/C/figures/trayicon-expired.png: likewise
	* help/C/figures/trayicon-expiring.png: likewise
	* help/C/figures/trayicon-valid.png: likewise
	* help/C/krb5-auth-dialog.xml: likewise
	* help/C/legal.xml: likewise
	* help/Makefile.am: likewise
	* help/krb5-auth-dialog.omf.in: likewise
	* m4/gnome-doc-utils.m4: likewise
	* help/.gitignore: likewise

Mon May 25 19:11:58 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-applet.c: update about dialog 

Mon May 25 18:32:49 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* configure.ac: release 0.10
	* NEWS: likewise

Fri May 22 18:07:31 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/Makefile.am: add missing line continuation

Wed May 20 16:33:54 CEST 2009 Guido Günther <agx@sigxcpu.org>

	allow to turn off notifcations
	* src/krb5-auth-applet.c: add action to notifications